--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -45,6 +45,12 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    user-secret-key: itrichal
+    user-ttl: 7200000
+    user-token-name: authentication
   path:
     # 文件上传的基础URL
     base-url: http://localhost:8080
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sly.wechat.secret}
