【修改说明】调用百度地图API，实现检测配送距离功能 【修改人】Richal 【修改时间】2025/05/23

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -16,3 +16,7 @@ sky:
   wechat:
     appid: wx2a8556c76e885049
     secret: 1dce82cea2eb068665c27c0c52b65aa7
+
+  baidu-map:
+    ak: WeNAD3jWKDOd12kICy0rQzjODsiiQa4k
+    address: "江苏省南京市雨花台春江佳园"
